agentsandbox/envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080

    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains: ["*"]
              routes:
              #
              # oauth2-proxy endpoints
              #
              - match:
                  prefix: "/oauth2/"
                route:
                  cluster: oauth2_proxy
              #
              # backend
              #
              - match:
                  prefix: "/"
                route:
                  cluster: backend

              typed_per_filter_config:
                envoy.filters.http.ext_authz:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                  disabled: false

          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              http_service:
                server_uri:
                  uri: http://oauth2-proxy:4180
                  cluster: oauth2_proxy
                  timeout: 5s
                path_prefix: "/oauth2/auth"
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: cookie
                authorization_response:
                  allowed_upstream_headers:
                    patterns:
                    - exact: x-auth-request-user
                    - exact: x-auth-request-email
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: oauth2_proxy
    connect_timeout: 2s
    type: STRICT_DNS
    load_assignment:
      cluster_name: oauth2_proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: oauth2-proxy
                port_value: 4180

  - name: backend
    connect_timeout: 2s
    type: STRICT_DNS
    load_assignment:
      cluster_name: backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend
                port_value: 3000
